--- a/comment-ms/src/main/resources/application-docker.yml
+++ b/comment-ms/src/main/resources/application-docker.yml
@@ -8,11 +8,11 @@ server:
 spring:
   application:
     name: comment-service
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql:3306/b?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-    username: root
-    password: root
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://mysql:3306/b?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#    username: root
+#    password: root
   jpa:
     hibernate:
       ddl-auto: update
