--- a/k8s/front-end-depl.yaml
+++ b/k8s/front-end-depl.yaml
@@ -10,8 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        app:
-          front-end
+        app: front-end
     spec:
       containers:
         - name: front-end
