--- a/k8s/services/mysql/statefulset.yaml
+++ b/k8s/services/mysql/statefulset.yaml
@@ -33,7 +33,7 @@ spec:
           #   - containerPort: 3306
           volumeMounts:
             - name: mysql-persistent-storage
-              mountPath: /var/lib/mysql/data
+              mountPath: /var/lib/mysql
   volumeClaimTemplates:
     - metadata:
         name: mysql-persistent-storage
