--- a/comment-ms/src/main/resources/application-k8s.yml
+++ b/comment-ms/src/main/resources/application-k8s.yml
@@ -20,7 +20,7 @@ spring:
     open-in-view: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
   #RabbitMQ
   rabbitmq:
     host: localhost
