--- a/comment-ms/src/main/resources/application.yml
+++ b/comment-ms/src/main/resources/application.yml
@@ -8,11 +8,11 @@ server:
 spring:
   application:
     name: comment-service
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/b?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-#    username: root
-#    password: root
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/b_comment?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    username: root
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
@@ -20,7 +20,7 @@ spring:
     open-in-view: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
   #RabbitMQ
   rabbitmq:
     host: localhost
@@ -28,13 +28,11 @@ spring:
     username: guest
     password: guest
 #    virtual-host: /
-#logging:
-#  level:
-#    root: info
-#    com.lrm: debug
-#  file:
-#    name: /tmp/blog-dev.log
-
+logging:
+  level:
+    com.lrm: debug
+  file:
+    name: /log/comment-dev.log
 #Eureka
 eureka:
   client:
