--- a/gateway/src/main/resources/application-docker.yml
+++ b/gateway/src/main/resources/application-docker.yml
@@ -4,6 +4,7 @@ spring:
   application:
     name: gateway
 #Gateway
+
   cloud:
     gateway:
       routes:
@@ -13,6 +14,7 @@ spring:
             - Path=/blog/**
 
         - id: comment-service
+          #container_name
           uri: http://comment:8082
           predicates:
             - Path=/comment/**
