--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     gateway:
       routes:
         - id: blog-service
-          uri: lb://BLOG-SERVICE-DEV
+          uri: lb://BLOG-SERVICE
           predicates:
             - Path=/blog/**
 
